# playwright-python-learning

./: .gitignore  Makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: api_tests.yml  nightly.yml  tests.yml
config/: __init__.py  settings.py
config/environments/: __init__.py  ci.py  local.py  production.py  staging.py
data/: __init__.py
data/factories/: __init__.py  product_factory.py  user_factory.py
pages/: __init__.py  base_page.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
pages/components/: __init__.py  header.py  sidebar_menu.py
pages/the_internet/: __init__.py  dynamic_loading_page.py  login_page.py  secure_area_page.py
reports/: custom.css
scripts/: maintenance.py  run_ui_mode.py  test_health.py
tests/: conftest.py  conftest_with_traces.py  playwright_state.py  test_assertions.py  test_assertions_practice.py  test_basics.py  test_dynamic_elements.py  test_dynamic_practice.py  test_first_navigation.py  test_interactions.py  test_interactions_practice.py  test_locators.py  test_locators_practice.py  test_navigation.py  test_practice.py  test_with_fixtures.py  verify_setup.py
tests/api/: conftest.py  test_advanced_fixtures.py  test_advanced_validation.py  test_api_intro.py  test_api_mocking.py  test_api_with_clients.py  test_authentication.py  test_contract_testing.py  test_crud_operations.py  test_data_factories.py  test_health_check.py  test_performance.py  test_post_requests.py  test_query_parameters.py  test_schema_validation.py  test_status_codes.py  test_trace_debugging_scenarios.py  test_with_clients.py  test_with_fixtures.py  test_with_tracing.py
tests/debug/: test_common_errors.py  test_debug_exercise.py  test_flaky_debugging.py  test_isolation.py  test_screenshots.py  test_with_error_handlers.py  test_with_logging.py  test_with_pause.py
tests/fixtures/: caching.py  cleanup.py  composition.py  context_manager.py  factories.py  lazy.py  parallel_safe.py  parametrized.py  request_introspection.py
tests/functional/: conftest.py  test_cart.py  test_checkout.py  test_composed_fixtures.py  test_login_parametrized.py  test_parametrized_fixtures.py  test_products.py  test_request_usage.py  test_with_factories.py
tests/pom/: test_checkout_pom.py  test_inventory_pom.py
(+33 files in other folders)
